--- a/src/components/Signup/styles.css
+++ b/src/components/Signup/styles.css
@@ -12,3 +12,14 @@
     font-size: 1.2rem;
     text-align: center;
 }
+
+.p-login {
+    text-align: center;
+    margin: 0;
+    font-weight: 300;
+    font-size: 0.8rem;
+}
+
+.p-login link { 
+    cursor: pointer;
+}
