sorting functionalities done and styling fixed

--- a/src/components/Cards/styles.css
+++ b/src/components/Cards/styles.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 16px;
-    margin: 2rem auto;
+    margin: 1rem auto;
 }
 
 .my-card {
@@ -13,15 +13,20 @@
     font-family: "Montserrat", sans-serif ; 
     flex: 1;
     margin: 2rem;
+    
 }
 
 .ant-card-head-title {
-    font-size: 1.3rem;
-    font-weight: 550;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 .my-card p {
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
+}
+
+.ant-card .ant-card-body  {
+    padding-bottom: 15px;
 }
 
